# Linux2Windows

./: CMakeLists.txt  linux2win_config.h.in
include/linux2win/: _dirent.h  _dlfcn.h  _getopt.h  _time.h  _unistd.h  _usleep.h  linux2win_dirent.h  linux2win_dlfcn.h  linux2win_error.h  linux2win_getopt.h  linux2win_mkstemp.h  linux2win_popen.h  linux2win_regex.h  linux2win_stat_modes.h  linux2win_strings.h  linux2win_time.h  linux2win_unistd.h  linux2win_usleep.h  linux2win_warning.h
src/: _dlfcn.c  _getopt.c  _time.c  _usleep.c
